--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pandas = "^2.2.1"
 playwright = "^1.42.0"
 playwright-stealth = "^1.0.6"
 tiktoken = "^0.6.0"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.extras]
 api = ["Flask"]
