--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ playwright = "^1.42.0"
 playwright-stealth = "^1.0.6"
 tiktoken = "^0.6.0"
 psycopg2-binary = "^2.9.10"
+dotenv = "^0.9.9"
 
 [tool.poetry.extras]
 api = ["Flask"]
